examples/st2110/valid/05_typical_multistream.sdp
v=0
o=- 9988776655 1 IN IP4 172.16.1.1
s=Production Suite: 1080p25 Video + 5.1 Audio + ANC
t=0 0
a=ts-refclk:ptp=IEEE1588-2008:FC-AB-89-FF-FE-67-45-23:0
m=video 10000 RTP/AVP 96
c=IN IP4 239.200.0.1/64
b=AS:1485000
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; TP=2110TPN; SSN=ST2110-20:2017
a=mediaclk:direct=0
m=audio 10010 RTP/AVP 97
c=IN IP4 239.200.0.2/64
a=rtpmap:97 L24/48000/6
a=fmtp:97 channel-order=SMPTE2110.(51)
a=mediaclk:direct=0
m=audio 10012 RTP/AVP 98
c=IN IP4 239.200.0.3/64
a=rtpmap:98 L24/48000/2
a=fmtp:98 channel-order=SMPTE2110.(ST)
a=mediaclk:direct=0
m=application 10020 RTP/AVP 100
c=IN IP4 239.200.0.4/64
a=rtpmap:100 smpte291/90000
a=fmtp:100 DID_SDID=0x4145; VPID_Code=148
a=mediaclk:direct=0
