examples/st2110/invalid/01_missing_tsrefclk.sdp
v=0
o=- 1000 1 IN IP4 192.168.1.1
s=ST2110 Missing ts-refclk
t=0 0
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.0.1/64
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; colorimetry=BT709; PM=2110GPM; TP=2110TPN
a=mediaclk:direct=0
